--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="grid-2">
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
-            <h2>FirstName LastName</h2>
-            <p>City,Country.</p>
-            <a href="#"><i class="fab fa-twitter"></i></a>
+            <h2>Laura Dutra</h2>
+            <p>San Francisco, CA</p>
+            <a href="#"><i class="fab fa-dribbble"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
         </div>
