--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Your Name</title>
+    <title>Laura Dutra</title>
+    
 </head>
 <body>
     <div class="grid-2">
@@ -20,12 +21,16 @@
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
+            	<!--<h1> Creating cool things for the internet & other awesome stuff.</h1>-->
+				<h1>I create cool things for the internet & other <span class="green">awesome</span> stuff.</h1>
+				<p class="major">Laura Dutra is a freelance graphic designer who spends most of her time at the intersection of creativity & brand marketing.</p>
             <h2>Experience</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
 
             <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
+            <!-- SFO Callout -->
+			<h1>Working Remotely from San Francisco USA</h1>
+				<p>I work with freelancers and clients all over the world, but home base has been just relocated to the SF Bay Area. Traditional taught in California in design disciplines while learning web technologies in tandem. If I'm not being a touch agoraphobic, you can find me hiking and camping out in mountains up and down the West Coast.</p>
             <h2>Projects</h2>
             <a href="#">Project 1</a>
             <a href="#">Project 2</a>
