--- a/index.html
+++ b/index.html
@@ -21,22 +21,15 @@
         </div>
         <div class="section-2">
             <h2>About</h2>
-            	<!--<h1> Creating cool things for the internet & other awesome stuff.</h1>-->
-				<h1>I create cool things for the internet & other <span class="green">awesome</span> stuff.</h1>
-				<p class="major">Laura Dutra is a freelance graphic designer who spends most of her time at the intersection of creativity & brand marketing.</p>
-            <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
-
-            <h2>Skills</h2>
-            <!-- SFO Callout -->
-			<h1>Working Remotely from San Francisco USA</h1>
-				<p>I work with freelancers and clients all over the world, but home base has been just relocated to the SF Bay Area. Traditional taught in California in design disciplines while learning web technologies in tandem. If I'm not being a touch agoraphobic, you can find me hiking and camping out in mountains up and down the West Coast.</p>
-            <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
+		<h1>I create cool things for the internet & other <span class="green">awesome</span> stuff.</h1>
+		<p class="major">I'm a freelance graphic designer who spends most of their time at the intersection of creativity & brand marketing. I knwo just enough code to be dangerous in an editor.</p>
+        
+            <h2>Project Links</h2>
+            <a href="#">TACT Website UI Elements Changes</a>
+            <a href="wwww.ldutra.com">If you're looking for my personal portfolio website...</a>
             <a href="#">Project 3</a>
-            <a href="#">Project 4</a>
-            <a href="#">Project 5</a>
+            <a href="#">Coming Soon</a>
+            <a href="#">Coming Soon</a>
             <h2>Contact</h2>
             <p>myEmail@email.com</p>
         </div>
