--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
 		<p class="major">I'm a freelance graphic designer who spends most of their time at the intersection of creativity & brand marketing. I knwo just enough code to be dangerous in an editor.</p>
         
             <h2>Project Links</h2>
-            <a href="#">TACT Website UI Elements Changes</a>
+            <a href="www.ldutra.com/tact/">TACT Website UI Elements Changes</a>
             <a href="wwww.ldutra.com">If you're looking for my personal portfolio website...</a>
             <a href="#">Project 3</a>
-            <a href="#">Coming Soon</a>
-            <a href="#">Coming Soon</a>
-            <h2>Contact</h2>
-            <p>myEmail@email.com</p>
+            <a href="#">Project 4</a>
+            <a href="#">Project 5</a>
         </div>
     </div>
 </body>
