--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<p class="major">I'm a freelance graphic designer who spends most of their time at the intersection of creativity & brand marketing. I knwo just enough code to be dangerous in an editor.</p>
         
             <h2>Project Links</h2>
-            <a href="www.ldutra.com/tact/">TACT Website UI Elements Changes</a>
+            <a href="https://www.ldutra.com/tact/">TACT Website UI Elements Changes</a>
             <a href="wwww.ldutra.com">If you're looking for my personal portfolio website...</a>
             <a href="#">Project 3</a>
             <a href="#">Project 4</a>
